--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,7 @@
 <title>login</title>
 <p>welcome to login page</p>
 <div>
-    <form method="post" action="/login">
+    <form method="post" action="http://www.douban.com">
         email <input type="textbox"/><br/>
         password <input type="textbox"><br/>
         <input type="submit" value="login">
