--- a/templates/login.html
+++ b/templates/login.html
@@ -3,8 +3,8 @@
 <p>welcome to login page</p>
 <div>
     <form method="post" action="http://www.douban.com">
-        email <input type="textbox"/><br/>
-        password <input type="textbox"><br/>
+        email <input type="textbox" name="eamil" maxlength="64" size="20"/><br/>
+        password <input type="textbox" name="password" maxlength="16" size="20"><br/>
         <input type="submit" value="login">
     </form>
 </div>
