完成登出功能

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <title>Hello flask</title>
 {% if name %}
 <h2>welcome {{ name }} !</h2>
-<a href='#'>logout</a>
+<a href='/'>logout</a>
 {% else %}
 <h2>welcome to diray space !</h2>
 <a href='#'>sign up for free</a><br/>
