--- a/templates/login.html
+++ b/templates/login.html
@@ -9,7 +9,7 @@
     <body onload="changeWindowSize()">
         <div class="wrapper">
             <div id="header">
-                <a href="" class="logo">欢迎登录</a>
+                <a href="/" class="logo">欢迎登录</a>
             </div>
 
             <div id="content">
@@ -36,7 +36,7 @@
                         </div>
                         <div class="item">
                             <label>&nbsp;</label>
-                            <input value="登录" name="user_login" class="btn-submit" tabindex="5" type="submit">
+                            <input value="登录" name="user_login" class="login" tabindex="5" type="submit">
                         </div>
                     </form>
                 </div>
@@ -47,7 +47,7 @@
             </div>
                 <div id="footer">
                     <span id="icp" class="fleft gray-link">
-                    © 没有目标的人，永远活在平庸里。
+                    © 这里写点什么好呢...
                     </span>
                     <span class="fright">
                         <a href="#" target="_blank">关于柠檬</a> 
