--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,7 +1,7 @@
 body {
     background-color: #FFFFFF;
     color: #333333;
-    background-image:url('../img/new_back.gif');
+    background-image:url('../img/new_back.jpg');
     background-repeat:no-repeat;                                                                                                   
     background-position:100% 0%; 
 }
@@ -164,4 +164,33 @@ position:relative;
 top:1px;
 }
 
+.content {
+    padding: 0;
+    width: 100%;
+}
 
+.begintaste {
+    width:100%;
+    height:30px;
+    background-color:#C9F76F;
+    margin:80px 0 0 0;
+}
+.about {
+    width:100%;
+    height:5px;
+    background-color:#2F8F00;
+    margin:150px 0 20px 0;
+}
+#footer-push {
+    clear: both;
+    height: 268px;
+}
+#footer .container {
+    border-top: 1px solid #EEEEEE;
+    padding: 30px 0;
+}
+.footer_nav {
+    float: left;
+    margin-bottom: 20px;
+    width: 20%;
+}
