--- a/templates/index.html
+++ b/templates/index.html
@@ -15,8 +15,70 @@
                     <a href="/"><img  class="header-logo-wordmark" border="0" src="../static/img/title1.png"/></a>
                     <a href='#' class="signupButton"> sign up for free</a>
                     <a href='login' class="signinButton" >login</a>
+                    {% endif %}
+                </div>
             </div>
-            {% endif %}
+            <div class="content">
+                <div class="begintaste">                                                                                         
+                </div>
+                <div class="container clearfix">
+                    <p style="font-size:70px; margin:20px 0 10px 0">
+                        Keep learning,<br/>
+                        keep writing.
+                    </p>
+                    <span style="font-size:14px; margin:10px 0 30px 0; color:#B9BEC2">
+                        谁念西风独自凉？萧萧黄叶闭疏窗，沉思往事立残阳。被酒莫惊春睡重，赌书消得泼茶香，当时只道是寻常。
+                    </span>
+                </div>
+                <div class="about">
+                </div>
+                <div id="footer-push">
+                    <div class="container clearfix">
+                        <dl class="footer_nav">
+                            <dt>lemon</dt>
+                            <dd>
+                            <a href="#">About me</a>
+                            </dd>
+                            <dd>
+                            <a href="#">Blog</a>
+                            </dd>
+                            <dd>
+                            <a href="#">Contact & support</a>
+                            </dd>
+                        </dl>
+                        <dl class="footer_nav">
+                            <dt>Applications</dt>
+                            <dd>
+                            <a href="#">for ios</a>
+                            </dd>
+                            <dd>
+                            <a href="#">for Android</a>
+                            </dd>
+                            <dd>
+                            <a href="#">for windows phone</a>
+                            </dd>
+                        </dl>
+                        <dl class="footer_nav">
+                            <dt>Documentation</dt>
+                            <dd>
+                            <a href="#">flask</a>
+                            </dd>
+                            <dd>
+                            <a href="#">Flask-SQLAlchemy</a>
+                            </dd>
+                            <dd>
+                            <a href="#">Python</a>
+                            </dd>
+                        </dl>
+                        <dl class="footer_nav">
+                            <dt>More</dt>
+                            <dd>
+                            <a href="#">...</a>
+                            </dd>
+                        </dl>
+                    </div>
+                </div>
+            </div>
         </div>
     </body>
 </html>
