--- a/templates/base.html
+++ b/templates/base.html
@@ -9,8 +9,8 @@
         {% endblock %}
     </head>
     <body>
-            {% block header %}
             <div class="header header-logged-out">
+            {% block header %}
                 <div class="container clearfix">
                     {% if name %}
                     <h2>welcome {{ name }} !</h2>
@@ -18,27 +18,27 @@
                     {% else %}
                     <a href="/"><img  class="header-logo-wordmark" border="0" src="../static/img/title1.png"/></a>
                     <a href='#' class="signupButton"> sign up for free</a>
-                    <a href='login' class="signinButton" >login</a>
+                    <a href='signin' class="signinButton" >login</a>
                     {% endif %}
                 </div>
                  <p style="font-size:14px; font-style:italic;font-family:Arial,Verdana,Sans-serif; margin:10px 0 0 300px; float:left;           ">为自己的生活写一本书</p>
-            </div>
             {% endblock %}
+            </div>
             <div class="begintaste"></div>
-                {% block content %}
-                <div class="container clearfix">
-                    <p style="font-size:50px; margin:20px 0 10px 0">
-                    Keep learning, keep writing.</p>
-                    <p style="font-size:65px; margin:5px 0 0 0">
-                        Make life better..
-                    </p>
-                    <span style="font-size:14px; margin:10px 0 30px 0; color:#B9BEC2">
-                        谁念西风独自凉？萧萧黄叶闭疏窗，沉思往事立残阳。被酒莫惊春睡重，赌书消得泼茶香，当时只道是寻常。
-                    </span>
-                </div>
-                {% endblock %}
-            {% block footer %}
+            <div class="container clearfix">
+            {% block content %}
+                <p style="font-size:50px; margin:20px 0 10px 0">
+                Keep learning, keep writing.</p>
+                <p style="font-size:65px; margin:5px 0 0 0">
+                    Make life better..
+                </p>
+                <span style="font-size:14px; margin:10px 0 30px 0; color:#B9BEC2">
+                    谁念西风独自凉？萧萧黄叶闭疏窗，沉思往事立残阳。被酒莫惊春睡重，赌书消得泼茶香，当时只道是寻常。
+                </span>
+            {% endblock %}
+            </div>
             <div id="footer">
+            {% block footer %}
                 <div class="about">
                 </div>
                 <div class="container clearfix">
@@ -94,7 +94,7 @@
                     , Inc. All rights reserved.
                     </p>
                 </div>
-            </div>
             {% endblock %}
+            </div>
     </body>
 </html>
