--- a/templates/base.html
+++ b/templates/base.html
@@ -17,8 +17,8 @@
                     <a href='/'>logout</a>
                     {% else %}
                     <a href="/"><img  class="header-logo-wordmark" border="0" src="../static/img/title1.png"/></a>
-                    <a href='#' class="signupButton"> sign up for free</a>
-                    <a href='signin' class="signinButton" >login</a>
+                    <a href='/register' class="signupButton"> sign up for free</a>
+                    <a href='login' class="signinButton" >login</a>
                     {% endif %}
                 </div>
                  <p style="font-size:14px; font-style:italic;font-family:Arial,Verdana,Sans-serif; margin:10px 0 0 300px; float:left;           ">为自己的生活写一本书</p>
@@ -45,13 +45,13 @@
                     <dl class="footer_nav">
                         <dt>lemon</dt>
                         <dd>
-                        <a href="#">About me</a>
+                        <a href="/about/aboutme" target="_blank">About me</a>
                         </dd>
                         <dd>
-                        <a href="#">Blog</a>
+                        <a href="http://liontree.github.io/" target="_blank">Blog</a>
                         </dd>
                         <dd>
-                        <a href="#">Contact & support</a>
+                        <a href="">Contact & support</a>
                         </dd>
                     </dl>
                     <dl class="footer_nav">
@@ -69,22 +69,22 @@
                     <dl class="footer_nav">
                         <dt>Documentation</dt>
                         <dd>
-                        <a href="" target="_blank">flask</a>
+                        <a href="http://dormousehole.readthedocs.org/en/latest/" target="_blank">flask</a>
                         </dd>
                         <dd>
-                        <a href="" target="_blank">Flask-SQLAlchemy</a>
+                        <a href="http://pythonhosted.org/Flask-SQLAlchemy/" target="_blank">Flask-SQLAlchemy</a>
                         </dd>
                         <dd>
-                        <a href="" target="_blank">Python</a>
+                        <a href="http://docs.python.org/2.7/" target="_blank">Python</a>
                         </dd>
                         <dd>
-                        <a href="http://jinja.pocoo.org/docs/templates/" target="_blank">jinja2</a>
+                        <a href="http://jinja.pocoo.org/docs/" target="_blank">jinja2</a>
                         </dd>
                     </dl>
                     <dl class="footer_nav">
                         <dt>More</dt>
                         <dd>
-                        <a href="#">...</a>
+                        <a href="">...</a>
                         </dd>
                     </dl>
                     <hr class="footer-divider">
