--- a/static/css/register.css
+++ b/static/css/register.css
@@ -27,6 +27,38 @@
     margin: 15px 0;
     font: 12px/1.6 arial,helvetica,sans-serif;
 }
+.suggestion {
+    padding-left: 75px;
+}
+.tips {
+    color: #808080;
+    font-size: 12px;
+}
+p.agreement {
+    margin-left: 75px;
+}
+.agreement input, .agreement label {
+    cursor: pointer;
+}
+.agreement-label {
+    color: #000000;
+}
+.tips, #location, .agreement-label {
+    color: #808080;
+    font-size: 12px;
+}
+.agreement-label {
+    display: inline;
+    float: none;
+    text-align: left;
+    width: auto;
+}
+input, button, textarea, select, optgroup, option {
+    font-family: inherit;
+    font-size: inherit;
+    font-style: inherit;
+    font-weight: inherit;
+}
 label {
     display: inline-block;
     float: left;
@@ -77,7 +109,7 @@ a:hover {
     text-decoration: none;
 }
 
-.login {
+.register {
 
 -moz-box-shadow:inset 0px 1px 0px 0px #a4e271;
 -webkit-box-shadow:inset 0px 1px 0px 0px #a4e271;
@@ -110,7 +142,7 @@ text-decoration:none;
 text-shadow:0px 1px 0px #528009;
 
 }
-.login:hover {
+.register:hover {
 
 background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #77a809), color-stop(1, #89c403));
 background:-moz-linear-gradient(top, #77a809 5%, #89c403 100%);
@@ -122,7 +154,7 @@ filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#77a809', endCo
 
 background-color:#77a809;
 }
-.login:active {
+.register:active {
 position:relative;
 top:1px;
 }
