--- a/templates/login.html
+++ b/templates/login.html
@@ -20,6 +20,13 @@
                 <div class="item">
                     <label>帐号</label>
                     <input style="color: rgb(204, 204, 204);" id="email" name="email" class="basic-input" maxlength="64" value="邮箱/手机号" tabindex="1" type="text">
+                    {% with messages = get_flashed_messages() %}
+                        {% if messages %}
+                            {% for message in messages %}
+                                <span class="error-tip">{{ message }}</span>
+                            {% endfor %}
+                        {% endif %}
+                    {% endwith %}
                 </div>
                 <div class="item">
                     <label>密码</label>
