--- a/static/css/base.css
+++ b/static/css/base.css
@@ -58,7 +58,12 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     top:20px
 }
 
-
+.name {
+    position:relative;
+    float:left;
+    left:180px;
+    margin:10px;
+}
 .signupButton {
 
 -moz-box-shadow:inset 0px 1px 0px 0px #a4e271;
@@ -86,13 +91,13 @@ color:#ffffff;
 font-family:arial;
 font-size:15px;
 font-weight:bold;
-padding:7px 19px;
+padding:6px 19px;
 text-decoration:none;
 
 text-shadow:0px 1px 0px #528009;
 float:left;
 position:relative;
-left:120px;
+left:185px;
 }
 .signupButton:hover {
 
@@ -140,13 +145,13 @@ color:#777777;
 font-family:arial;
 font-size:15px;
 font-weight:bold;
-padding:7px 17px;
+padding:6px 17px;
 text-decoration:none;
 
 text-shadow:0px 1px 0px #ffffff;
 float:left;
 position:relative;
-left:135px;
+left:200px;
 }
 .signinButton:hover {
 
@@ -165,6 +170,38 @@ position:relative;
 top:1px;
 }
 
+.logout {
+-moz-box-shadow:inset 0px 1px 0px 0px #ffffff;
+-webkit-box-shadow:inset 0px 1px 0px 0px #ffffff;
+box-shadow:inset 0px 1px 0px 0px #ffffff;
+background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #ededed), color-stop(1, #dfdfdf) );
+background:-moz-linear-gradient( center top, #ededed 5%, #dfdfdf 100% );
+filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ededed', endColorstr='#dfdfdf');
+background-color:#ededed;
+-moz-border-radius:6px;
+-webkit-border-radius:6px;
+border-radius:6px;
+border:1px solid #dcdcdc;
+display:inline-block;
+color:#777777;
+font-family:arial;
+font-size:15px;
+font-weight:bold;
+padding:6px 20px;
+text-decoration:none;
+text-shadow:1px 1px 0px #ffffff;
+position:relative;
+left:190px;
+float:left;
+}.logout:hover {
+background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #dfdfdf), color-stop(1, #ededed) );
+background:-moz-linear-gradient( center top, #dfdfdf 5%, #ededed 100% );
+filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#dfdfdf', endColorstr='#ededed');
+background-color:#dfdfdf;
+}.logout:active {
+position:relative;
+top:1px;
+}
 .content {
     padding: 0;
     width: 100%;
