--- a/templates/register.html
+++ b/templates/register.html
@@ -32,11 +32,13 @@
                 <input id="password" name="password" class="basic-input" maxlength="16" tabindex="2" type="password"/>
             </div>
             <div class="item">
-                <label>名号</label>
+                <label>昵称</label>
                 <input id="username" name="username" class="basic-input" maxlength="16" tabindex="3" type="text"/>
             </div>
-            <div class="suggestion">
-                <span class="tips">起个霸气的名号吧</span>
+            <div class="item">
+                <label>用户ID</label>
+                <input id="userid" name="userid" class="basic-input" maxlength="16" tabindex="4" type="text"/>
+                &nbsp; <span style="color:#008500">用户ID唯一，一旦设置不可更改</span>
             </div>
             <div class="item">
                 <p class="agreement">
