--- a/templates/base.html
+++ b/templates/base.html
@@ -13,16 +13,15 @@
             {% block header %}
                 <div class="container clearfix">
                     <a href="/"><img  class="header-logo-wordmark" border="0" src="../static/img/title1.png"/></a>
-                    {% if current_user.is_authenticated() %}
-                    <span class="name">这是{{ current_user.name }}的创作之地</span>
-                    <a href='/note/create' class="create">create</a>
-                    <a href='/' class="logout">logout</a>
+                    {% if name and current_user.is_authenticated() %}
+                        <span class="name">{{ name }}的创作之地</span>
+                        <a href='{{ url_for('create') }}' class="create">create</a>
+                        <a href='/' class="logout">logout</a>
                     {% else %}
-                    <a href='/register' class="signupButton"> sign up for free</a>
-                    <a href='/login' class="signinButton" >login</a>
+                        <a href='/register' class="signupButton"> sign up for free</a>
+                        <a href='/login' class="signinButton" >login</a>
                     {% endif %}
                 </div>
-                 <p style="font-size:14px; font-style:italic;font-family:Arial,Verdana,Sans-serif; margin:10px 0 0 300px; float:left;           ">为自己的生活写一本书</p>
             {% endblock %}
             </div>
             <div class="begintaste"></div>
