--- a/templates/login.html
+++ b/templates/login.html
@@ -35,7 +35,7 @@
                 <div class="item">
                     <label>&nbsp;</label>
                     <p class="remember">
-                        <input id="remember" name="remember" tabindex="4" type="checkbox">
+                        <input id="remember" name="remember" value="yes" tabindex="4" type="checkbox">
                         <label for="remember" class="remember">下次自动登录</label>
                         <a href="#">忘记密码了</a>
                     </p>    
