--- a/templates/register.html
+++ b/templates/register.html
@@ -37,7 +37,7 @@
             </div>
             <div class="item">
                 <label>用户ID</label>
-                <input id="userid" name="userid" class="basic-input" maxlength="16" tabindex="4" type="text"/>
+                <input id="displayid" name="displayid" class="basic-input" maxlength="16" tabindex="4" type="text"/>
                 &nbsp; <span style="color:#008500">用户ID唯一，一旦设置不可更改</span>
             </div>
             <div class="item">
