edit页面代码调整

--- a/templates/edit.html
+++ b/templates/edit.html
@@ -28,7 +28,8 @@
             </div>
 	        <div class="row footer">
                 <div class="error-msg board"> </div>
-                    <input id="publish_note" class="submit" type="submit" name="note_submit" value="发 表" tabindex="2"/>
+                 <input id="publish_note" class="submit" type="submit" name="note_submit" value="发 表" tabindex="2"/>
+                <a href="" class="cancel">取 消</a>
             </div>
         </form>
     </div>
