--- a/templates/register.html
+++ b/templates/register.html
@@ -52,7 +52,7 @@
             </div>
             <div class="item">
                 <label>&nbsp;</label>
-                <input value="注 册" name="user_login" class="register" tabindex="5" type="submit">
+                <input value="注 册" name="user_register" class="register" tabindex="5" type="submit">
             </div>
         </form>
     </div>
