完成编辑提交功能

--- a/templates/edit.html
+++ b/templates/edit.html
@@ -24,7 +24,7 @@
 		            </li>
 		        </ul>
 		        <label class="field" for="note_text">正文:</label>
-		        <textarea id="note_text" name="note_text" tabindex="1"></textarea>
+		        <textarea id="note_text" name="contents" tabindex="1"></textarea>
             </div>
 	        <div class="row footer">
                 <div class="error-msg board"> </div>
