--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
             <div class="header header-logged-out">
             {% block header %}
                 <div class="container clearfix">
-                    <a href="/"><img  class="header-logo-wordmark" border="0" src="../static/img/title1.png"/></a>
+                    <a href="/"><img  class="header-logo-wordmark" border="0" src="../static/img/titlelogo.png"/></a>
                     {% if name and current_user.is_authenticated() %}
                         <span class="name">{{ name }}的创作之地</span>
                         <a href='{{ url_for('create') }}' class="create">create</a>
@@ -96,7 +96,7 @@
                     <hr class="footer-divider">
                     <p class="right">
                     © 2013
-                    <span title="这里暂时空缺..">lemondiary</span>
+                    <span title="这里暂时空缺..">lemonbook</span>
                     , Inc. All rights reserved.
                     </p>
                 </div>
