页面样式调整

--- a/templates/aboutme.html
+++ b/templates/aboutme.html
@@ -7,7 +7,7 @@
 {% block header %}
 <div class="container clearfix">
     <a href="/">
-        <img class="header-logo-wordmark" border="0" src="../static/img/title1.png">
+        <img class="header-logo-wordmark" border="0" src="../static/img/titlelogo.png">
     </a>
 </div>
 {% endblock %}
@@ -18,9 +18,10 @@
         <span class="wrap">
             <p style="font-size:14px; color:#5F6568">柠檬的诞生</p>
         </span>
-        <div style="indent; font-size:12px;">
-            <br/>这里有好多话要说..<br/>
-            有空再说..<br/><br/><br/>
+        <div style="indent; font-size:13px;">
+            <br/>lemonbook now is a website based on flask. You can write dowm your mood or things happened around you everyday by using it. If you could persist in writing all the time, you will pleasantly surprised to find that your life is just like a wonderful book! No matter what the circumstances are, you will find that your life is not boring, sometimes it is so exciting!<br/>
+            Maybe, you have forgotten the things happened on the day last year, it may be the first time you met each other, it may be a long talk with your friend sat side by side, it may be the day you started a new travel... Anyway, recording these interesting moments...<br/>
+            Do not let the life take away those beautiful things..<br/><br/>
         </div>
         <span class="wrap">
             <p style="font-size:14px; color:#5F6568">参与柠檬</p>
