--- a/templates/base.html
+++ b/templates/base.html
@@ -32,11 +32,17 @@
                     <p>这里的功能暂时还没有实现</p>
                 </div>
                 {% else %}
-                <p style="font-size:50px; margin:20px 0 10px 0">
-                Keep learning, keep writing.</p>
-                <p style="font-size:65px; margin:5px 0 0 0">
-                    Make life better..
-                </p>
+                <div id="sideLeft">
+                    <section id="workshop">
+                        <div class="box">
+                            <div class="tnode">
+                            waiting..
+                            在过去的圈养条件下，的确如此；但野外不一样。要知道野生的大熊猫雄性平均有9.8平方公里的领地，雌性更是有23.7平方公里。繁殖期的时候熊猫是群婚制的，几只雄性会相互竞争，雄性和雌性都可与多个异性交配，恋爱相当自由。相比之下，圈养大熊猫大多只能生活在狭小的笼子里，许多动物园更是因条件所限只能养一对。野外大熊猫成年后表现出繁殖行为的比例是100%，而到2000年为止圈养大熊猫只有26%。没有可比性
+                            啊。
+                            </div>
+                        </div> 
+                    </section>
+                </div>
                 <span style="font-size:14px; margin:10px 0 30px 0; color:#B9BEC2">
                     谁念西风独自凉？萧萧黄叶闭疏窗，沉思往事立残阳。被酒莫惊春睡重，赌书消得泼茶香，当时只道是寻常。
                 </span>
