--- a/templates/edit.html
+++ b/templates/edit.html
@@ -6,7 +6,7 @@
 {% endblock %}
 {% block header %}
 <div class="container clearfix">
-    <a href="/"><img  class="header-logo-wordmark" border="0" src="../static/img/title1.png"/></a>
+    <a href="/"><img  class="header-logo-wordmark" border="0" src="../static/img/titlelogo.png"/></a>
 </div>
 {% endblock %}
 {% block content %}
