--- a/templates/basebak.html
+++ b/templates/basebak.html
@@ -32,56 +32,29 @@
                     <p>这里的功能暂时还没有实现</p>
                 </div>
                 {% else %}
-                <div class="contentintro">
-                    <img src="../static/img/subway.png" class="firstleft"></img>
-                    <p class="firstright">
-                    有时候生活像碎片一样<br/>
+                <div class="bookback">
+                    <p class="sideleft">
+                    是否觉得自己的生活像碎片一样<br/>
                     零零散散<br/>
-                    看似忙碌的节奏<br/>
+                    那看似忙碌的节奏<br/>
                     却乏善可陈<br/>
                     苍白，无力<br/>
                     试着改变，却不知为何<br/>
                     生活依旧是单调的颜色..<br/><br/>
-                    生活的轨迹似乎一直在重复<br/>
-                    没有出口<br/>
-                </div>
-                <div class="contentintro">
-                    <p class="secondleft">
-                    很多瞬间<br/>
-                    还来不及回味<br/>
-                    就已消逝不见<br/>
-                    很多计划<br/>
-                    还来不及执行<br/>
-                    就已被搁浅<br/>
-                    很多理想<br/>
-                    还来不及实现<br/>
-                    就已淡出生活..<br/>
+                    其实，美好的瞬间<br/>
+                    并非不曾出现<br/>
+                    只是，你的思想淡化了它..<br/><br/>
+                    试着记录下它们吧<br/>
+                    一天，两天<br/>
+                    一年，两年<br/>
+                    突然有一天，你会发现<br/>
+                    自己的生活比任何一本小说都要精彩
                     </p>
-                    <img src="../static/img/balloon.png" class="secondright"></img>
-                </div>
-                <div class="contentintro">
-                    <img src="../static/img/taste.png" class="thirdleft"></img>
-                    <p class="thirdright">
-                    若问自己<br/>
-                    生活真如感受到的那般么<br/>
-                    若细细品味<br/>
-                    发现其实美好的事并不匮乏<br/>
-                    只因那凌乱的步伐和浮躁的心<br/>
-                    冲淡了一切一切..<br/>
-                    </p>
-                </div>
-                <div class="fourthimg">
-                    <p class="fourthleft">
-                    为自己的生活写一本书吧<br/>
-                    那些美好的瞬间本不该轻易消逝<br/>
-                    <br/>生活<br/>
-                    本该比任何小说任何剧情精彩..<br/>
-                    </p>
-                    <p class="fourthright">
-                    现在<a href="{{ url_for('register') }}">开始</a>,
-                    记录下那些或美好或忧伤或兴奋或失意或酷或二的瞬间<br/>
-                    也许在某一天<br/>
-                    它会给你带来惊喜^_^
+                    <p class="sideright">
+                    lemonbook可以让你把自己的生活写成一本书，沉淀生活，细细品味，娓娓道来..<br/><br/>
+                    别让乏味冲淡了美好..<br/><br/><br/>
+                    如果你想记录下那些或美好或忧伤或兴奋或失意或酷或二的生活，现在就<a href="{{ url_for('register') }}">开始</a>吧!
+                    ^_^
                     </p>
                 </div>
                 {% endif %}
