--- a/templates/register.html
+++ b/templates/register.html
@@ -63,7 +63,7 @@
         </li>
         <li>
             > 
-            <a href="">点击下载柠檬移动应用</a>
+            <a href="/about/app" target="_blank">点击下载柠檬移动应用</a>
     </ul>
 </div>
 <script>
