--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,9 +1,5 @@
 body {
-    background-color: #FFFFFF;
-    color: #333333;
-    background-image:url('../img/background_book.jpg');
-    background-repeat:no-repeat;                                                                                                   
-    background-position:100% 0%; 
+    background-color: #FDFDE9; 
 }
 body, input, select, textarea, button {
     font: 13px/1.4 Helvetica,arial,freesans,clean,sans-serif;
@@ -30,7 +26,14 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     background: none repeat scroll 0 0 transparent;
 }
 .header-logged-out {
-    padding: 10px 0;
+				padding-top: 10px;
+    width: 100%;
+    height: 80px;
+    background-color: #FBFBD7;
+}
+.bookimg {
+	float: right;
+	margin-top: 30px;
 }
 .container {
     margin: 0 auto;
@@ -96,7 +99,7 @@ text-decoration:none;
 text-shadow:0px 1px 0px #528009;
 float:left;
 position:relative;
-left:260px;
+left:320px;
 }
 .signupButton:hover {
 
@@ -114,7 +117,6 @@ background-color:#77a809;
 position:relative;
 top:1px;
 }
-
 
 
 .signinButton {
@@ -150,7 +152,7 @@ text-decoration:none;
 text-shadow:0px 1px 0px #ffffff;
 float:left;
 position:relative;
-left:275px;
+left:335px;
 }
 .signinButton:hover {
 
@@ -190,7 +192,7 @@ padding:6px 18px;
 text-decoration:none;
 text-shadow:1px 1px 0px #ffffff;
 position:relative;
-left:205px;
+left:265px;
 float:left;
 }
 .logout:hover {
@@ -204,26 +206,84 @@ position:relative;
 top:1px;
 }
 
-.bookback {
-	height: 500px;
+.contentintro{
+	height: 350px;
 	width: 850px;
-	background-image: url('../img/bookback.png');
-	background-repeat:no-repeat; 
- margin:20px 35px; 
+	margin: 10px 35px 0 35px;	
+}
+.firstleft{
+	margin: 35px 10px;
+	float: left;
+}
+.firstright{
+	float: right;
+    margin: 50px 37px;
+    font-size: 13px;
+    color: #AAB0B5;
+    width: 280px;
+    height: 240px;
+}
+.secondleft{
+    margin: 30px 75px;
+    width: 240px;
+    height: 250px;
+    float: left;	
+    font-size: 13px;
+    color: #AAB0B5;
+}
+.secondright{
+	margin: 30px 40px;
+	float: right;
+}
+.thirdleft{
+	float: left;
+	margin:35px 10px;
 	}
+.thirdright{
+	float: right;
+	margin:50px 37px;
+	font-size: 13px;
+	color: #AAB0B5;
+	height: 240px;
+	width: 260px;
+}
+.fourthimg{
+    background-image:url('../img/bookback_mini.jpg');
+    background-repeat:no-repeat;
+    height:350px;
+    width:480px;
+    margin:0 190px;
+}
+.fourthleft{
+    float:left;
+    font-size:13px;
+    color: #AAB0B5;
+    height:190px;
+    width:150px;
+    margin:60px 0px 0 30px;
+}
+.fourthright{
+    float:right;
+    font-size;13px;
+    color: #AAB0B5;
+    height: 190px;
+    width: 150px;
+    margin:60px 30px 0 0;
+}
 	
-
+.fourthright a{
+	color: #4183C4;
+    text-decoration: none;
+}
+.fourthright a:hover {
+	color: #FF8700;
+    text-decoration: none;
+}
 .content {
     padding: 0;
     width: 100%;
 }
 
-.begintaste {
-    width:100%;
-    height:28px;
-    background-color:#C9F76F;
-    margin:35px 0 0 0;
-}
 .about {
     width:100%;
     height:5px;
@@ -319,7 +379,7 @@ hr {
 	text-shadow:1px 1px 0px #689324;
     position:relative;
     float:left;
-    left:190px;
+    left:250px;
 }
 .create:hover {
 	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #8cb82b), color-stop(1, #9dce2c) );
