--- a/templates/login.html
+++ b/templates/login.html
@@ -53,7 +53,7 @@
             </li>
             <li>
                 > 
-                <a href="">点击下载柠檬移动应用</a>
+                <a href="/about/app" target="_blank">点击下载柠檬移动应用</a>
         </ul>
     </div>
 	<script>
