--- a/static/css/base.css
+++ b/static/css/base.css
@@ -26,9 +26,9 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     background: none repeat scroll 0 0 transparent;
 }
 .header-logged-out {
-				padding-top: 10px;
+	padding: 10px 0;
     width: 100%;
-    height: 80px;
+    height: 60px;
     background-color: #FBFBD7;
 }
 .bookimg {
@@ -59,12 +59,53 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     left:600px;
     top:20px
 }
-
+.newtop {
+    background-color:#D2EFC0;
+    width:100%;
+    height:28px;
+}
+.newtop a {
+    color:#5A5758;
+    text-decoration:none;
+}
+.newtop a:hover {
+    color:#2E7737;
+    text-decoration:none;
+}
 .name {
     position:relative;
-    float:left;
-    left:180px;
-    margin:10px;
+    float:right;
+    right:160px;
+    margin:8px 4px;
+    font-size:12px;
+    color:#5A5758;
+}
+.setting { 
+    position:relative;
+    float:right;
+    right:150px;
+    margin:8px 4px;
+    font-size:12px;
+}
+.mybook {
+    position:relative;
+    float:right;
+    right:155px;
+    margin:8px 4px;
+    font-size:12px;
+}
+.begin {
+    font-size:30px;
+    margin:100px 250px;
+    color:#8C979F;
+}
+.begin a {
+    text-decoration:none;
+    color:#4183C4;
+}
+.begin a:hover{
+    text-decoration:none;
+    color:#8C979F;
 }
 .signupButton {
 
@@ -97,9 +138,9 @@ padding:6px 18px;
 text-decoration:none;
 
 text-shadow:0px 1px 0px #528009;
-float:left;
+float:right;
 position:relative;
-left:320px;
+right:15px;
 }
 .signupButton:hover {
 
@@ -150,9 +191,9 @@ padding:6px 18px;
 text-decoration:none;
 
 text-shadow:0px 1px 0px #ffffff;
-float:left;
+float:right;
 position:relative;
-left:335px;
+right:0;
 }
 .signinButton:hover {
 
@@ -192,8 +233,8 @@ padding:6px 18px;
 text-decoration:none;
 text-shadow:1px 1px 0px #ffffff;
 position:relative;
-left:265px;
-float:left;
+right:0;
+float:right;
 }
 .logout:hover {
 background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #dfdfdf), color-stop(1, #ededed) );
@@ -248,10 +289,10 @@ top:1px;
 	width: 260px;
 }
 .fourthimg{
-    background-image:url('../img/bookback_mini.jpg');
+    background-image:url('../img/bookback_mini.png');
     background-repeat:no-repeat;
     height:350px;
-    width:480px;
+    width:540px;
     margin:0 190px;
 }
 .fourthleft{
@@ -260,7 +301,7 @@ top:1px;
     color: #AAB0B5;
     height:190px;
     width:150px;
-    margin:60px 0px 0 30px;
+    margin:60px 0px 0 60px;
 }
 .fourthright{
     float:right;
@@ -268,7 +309,7 @@ top:1px;
     color: #AAB0B5;
     height: 190px;
     width: 150px;
-    margin:60px 30px 0 0;
+    margin:60px 60px 0 0;
 }
 	
 .fourthright a{
@@ -378,8 +419,8 @@ hr {
 	text-decoration:none;
 	text-shadow:1px 1px 0px #689324;
     position:relative;
-    float:left;
-    left:250px;
+    float:right;
+    right:15px;
 }
 .create:hover {
 	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #8cb82b), color-stop(1, #9dce2c) );
