--- a/templates/base.html
+++ b/templates/base.html
@@ -9,18 +9,25 @@
         {% endblock %}
     </head>
     <body>
+        <div class="newtop">
+            {% if uid and current_user.is_authenticated() %}
+            <a href="" class="setting">设置</a>
+            <a href="{{ url_for('display',uid=uid) }}" class="mybook">我的书</a>
+            <span class="name">{{ current_user.username }}</span>
+            {% else %}
+                <span class="name">为自己的生活写一本书</span>
+            {% endif %}
+        </div>
         <div class="header header-logged-out">
-            <img  class="bookimg" src="../static/img/background_book.png"></img>
             {% block header %}
                 <div class="container clearfix">
                     <a href="/"><img  class="header-logo-wordmark" border="0" src="../static/img/titlelogo.png"/></a>
                     {% if uid and current_user.is_authenticated() %}
-                        <span class="name">{{ current_user.username }}的创作之地</span>
-                        <a href='{{ url_for('create') }}' class="create">create</a>
                         <a href='/' class="logout">logout</a>
+                        <a href='{{ url_for('create') }}' class="create">create</a>
                     {% else %}
+                        <a href='/latest' class="signinButton" >login</a>
                         <a href='/register' class="signupButton"> sign up for free</a>
-                        <a href='/login' class="signinButton" >login</a>
                     {% endif %}
                 </div>
             {% endblock %}
@@ -29,7 +36,12 @@
             {% block content %}
                 {% if uid %}
                 <div>
-                    <p>这里的功能暂时还没有实现</p>
+                    {% if contents != None %}
+                    <p style="margin:20px;font-size:13px;color:#575B5D">{{ contents }}</p>
+                    {% else %}
+                    <p class="begin">
+                    这里还没有记录&nbsp;现在<a href="/create">开始</a>？</p>
+                    {% endif %}
                 </div>
                 {% else %}
                 <div class="contentintro">
