--- a/templates/note.html
+++ b/templates/note.html
@@ -10,7 +10,7 @@
 {% endblock %}
 {% block header %}
 <div class="container clearfix">
-    <a href="/"><img  class="header-logo-wordmark" border="0" src="../static/img/booklogo.png"/></a>
+    <a href=""><img  class="header-logo-wordmark" border="0" src="../static/img/booklogo.png"/></a>
 </div>
 {% endblock %}
 {% block content %}
